--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>DAM 2012-13 / LMXI / -- Ejercicios CSS --</title>
+   <title>DAM 2012-13 / LMXI / -- Ejercicios CSS -- </title>
+   <style> li {display:inline;}
+           li img {width: 25px; height: 25px; }
+   </style>
 </head>
 <body>
+   <h1>Ejercicios CSS - LMXI DAM 2012-13</h1>
    <ul>
-      <li><a href="#">Ejercicio 1</a></li>
-      <li><a href="#">Ejercicio 2</a></li>
-      <li><a href="#">Ejercicio 3</a></li>
+      <li><a href="ej0/ejercicio 0.html">Ejercicio 0</a><a href="ej0/ejercicio 0.pdf"><img src="img/pdf.jpg" /></li>
+      <li><a href="ej1/ejercicio1.html">Ejercicio 1</a><a href="ej1/ejercicio 1.pdf"><img src="img/pdf.jpg" /></a></li>
+      <li><a href="ej2/ejercicio 2.html">Ejercicio 2</a><a href="ej2/ejercicio 2.pdf"><img src="img/pdf.jpg" /></a></li>
+      <li><a href="ej3/ejercicio3.html">Ejercicio 3</a><a href="ej3/ejercicio 3.pdf"><img src="img/pdf.jpg" /></a></li>
+      <li><a href="ej4/ejercicio4.html">Ejercicio 4</a><a href="ej4/ejercicio 4.pdf"><img src="img/pdf.jpg" /></a></li>
    </ul>
 </body>
